istio/example/dr-foo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: example-api-foo-dr
spec:
  host: foo.example-api.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        connectionPool:
          tcp:
            maxConnections: 100
            connectTimeout: 30ms
            tcpKeepalive:
              time: 7200s
              interval: 75s
        outlierDetection:
          consecutive5xxErrors: 7
          interval: 5m
          baseEjectionTime: 15m
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
        connectionPool:
          tcp:
            maxConnections: 100
            connectTimeout: 30ms
            tcpKeepalive:
              time: 7200s
              interval: 75s
        outlierDetection:
          consecutive5xxErrors: 7
          interval: 5m
          baseEjectionTime: 15m
