istio/example/vs-bar.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-api-bar-vs
spec:
  hosts:
    - bar.example-api.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /bar/legacy
      route:
        - destination:
            host: bar-legacy.example-api.svc.cluster.local
            port:
              number: 80
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 500ms
    - route:
        - destination:
            host: bar.example-api.svc.cluster.local
            port:
              number: 80
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 500ms
