istio/example/vs-foo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-api-foo-vs
spec:
  hosts:
    - foo.example-api.svc.cluster.local
  http:
    - match:
        - headers:
            cookie:
              environment: dev
          uri:
            prefix: /foo/new
      route:
        - destination:
            host: foo.example-api.svc.cluster.local
            port:
              number: 80
            subset: v2
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 500ms
    - route:
        - destination:
            host: foo.example-api.svc.cluster.local
            port:
              number: 80
            subset: v1
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 500ms
